# grasping-symmetry

./: .gitignore  CMakeLists.txt  README.md
include/GraspSymmetrizer/: .gripper.h.kate-swp  defs.h  grasp.h  gripper.h  object.h  symmetry.h  util.h
resources/: GraspDatabase_GraspIt_import.xml  GraspDatabase_base_layout.xml  GraspDatabase_base_layout_write.xml  GraspDatabase_layout.xml  Graspit_import_layout.xml  ObjectDatabase.xml  SchunkDexHandConfig.xml
resources/graspit/: faceplate_01_grasp_graspit.xml  faceplate_01_pregrasp_graspit.xml  faceplate_02_pregrasp_graspit.xml  fp_mirrored.xml  fp_test.xml  test_fingerpos.xml
src/: graspit_batch_export.cpp  test_classes.cpp  xml_test.cpp
src/GraspSymmetrizer/: grasp.cpp  gripper.cpp  object.cpp  symmetry.cpp  util.cpp
